fixed scrolling on mobile menu

--- a/components/mnav/mnav.module.scss
+++ b/components/mnav/mnav.module.scss
@@ -12,6 +12,7 @@
   padding: 50px 0;
   height: calc(100vh - 7.3rem);
   overflow-y: auto;
+  z-index: 1000;
 
   @media screen and (min-width: 768px) {
     height: calc(100vh - 130px);
@@ -22,5 +23,6 @@
     opacity: 1;
     transition: opacity 0.3s ease-in-out, visibility 0s linear 0s,
       min-height 0.3s ease-in-out;
+    border: 1px solid red;
   }
 }
